@@ -1,3 +1,0 @@
-Site URL: https://asstoo.com/
-Contact: https://asstoo.com/static/contact-us/
-DMCA: allcontactsdmca@proton.me
