@@ -1,3 +1,0 @@
-Site URL: https://www.bitporno.com/
-Contact: https://www.bitporno.com/?c=contact
-DMCA: https://www.bitporno.com/?c=abuse
