@@ -9,3 +9,5 @@
 - javgg: fix playback
 - javhdporn: fix pagination
 - erogarga: fix koreanpornmovie playback
+- asstoo: removed
+- bitporno: removed
